# Sports_See_ReAct

./: .gitignore  .pre-commit-config.yaml  AGENT_OPTIMIZATION_ANALYSIS.md  ALWAYS_BOTH_SIMPLIFICATION_2026_02_14.md  ARCHIVED_FILES_2026_02_14.md  BEST_PRACTICES_AUDIT.md  CHANGELOG.md  CHATSERVICE_FIX_SUMMARY.md  CURRENT_CLASSIFICATION_ANALYSIS.md  DEVELOPMENT_RULES.md  END_TO_END_PIPELINE_ANALYSIS.md  EVALUATION_CONSOLIDATION.md  JUDGE_LLM_IMPLEMENTATION.md  MINI_EVALUATION_QA_RESULTS.md  OPEN_DATABASE.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PROJECT_MEMORY.md  QUERY_ANALYZER_MIGRATION_FIXES.md  REACT_VERSION.md  README.md  REWRITE_PROGRESS_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  TEST_ALIGNMENT_ANALYSIS.md  TEST_ALIGNMENT_COMPLETE.md  TEST_ALIGNMENT_COMPLETE_REPORT.md  TEST_ALIGNMENT_FINAL_REPORT.md  TEST_ALIGNMENT_PLAN.md  TEST_RESULTS_SUMMARY.md  TEST_STRUCTURAL_ISSUES_FOUND.md  TUNING_FIXES_SUMMARY.md  USER_DECISIONS_IMPLEMENTATION_SUMMARY.md  coverage_thresholds.toml  deep_comparison_test.py  pyproject.toml  pytest.ini  show_answers.py
.streamlit/: config.toml
archive/: AGENT_SIMPLIFICATION_2026_02_14.md  COMPLETE_CLEANUP_REPORT.md  DEAD_CODE_ANALYSIS_REPORT.md  DEAD_CODE_DEPENDENCY_ANALYSIS.md  EVALUATION_CONSOLIDATION.md  EVALUATION_FIXES_SUMMARY.md  FINAL_FIXES_SUMMARY.md  JUDGE_LLM_IMPLEMENTATION.md  KEEP_OR_REMOVE_ANALYSIS.md  LANGCHAIN_MIGRATION_COMPLETE.md  LANGCHAIN_SQL_MIGRATION.md  LANGCHAIN_VECTOR_MIGRATION.md  MIGRATION_SUMMARY.md  OPTIMIZATION_REPORT.md  REACT_AGENT_MIGRATION.md  README.md  SLIDES.md  SMART_TOOL_SELECTION_SUMMARY.md  chat_old_biographical_methods.txt  chat_old_chat_method.txt  chat_pattern_based_full.py  chat_pattern_based_full_README.md  evaluation_unification_review.md  query_classifier.py  sql_tool_custom_chain.py  vector_ground_truth_prompt.md
docs/: API.md  API_TESTING.md  API_VALIDATION_STRATEGY.md  COMPREHENSIVE_ARCHITECTURAL_AUDIT.md  DATABASE_SCHEMA_ANALYSIS.md  EVALUATION_AUDIT.md  FLEXIBLE_EVALUATION_GUIDE.md  LOCAL_LOGGING_SETUP.md  LOGGING.md  PLAYWRIGHT_IMPLEMENTATION_COMPLETE.md  PORT_OVERRIDE_ROOT_CAUSE.md  PRESENTATION.md  PROJET_EVALUATION_CHECKLIST.md  QUERY_PIPELINE_CORRECTIONS.md  QUERY_PIPELINE_FLOWCHART.html  QUERY_PIPELINE_GUIDE.html  QUERY_PIPELINE_GUIDE.html.backup  QUERY_PIPELINE_GUIDE_UPDATE_SUMMARY.md  README.md  REFACTORING_PROPOSAL.md  SESSION_CHANGES_2026-02-15.md  SILENT_FAILURE_AUDIT.md  TESTING_GAPS_ANALYSIS.md  TEST_STRUCTURE_MIRROR.md  TROUBLESHOOTING_COMPLETE.md  UI_STATUS_REPORT.md  VECTOR_TEST_CASES_ANALYSIS.md
evaluation/: __init__.py  analyzer.py  evaluator.py  metrics.py  models.py  test_data.py  validator.py
evaluation_results/: 9_case_smart_tool_selection_test.json  CONSOLIDATED_RESULTS.json  CONSOLIDATION_SUMMARY.md  FINAL_COMPREHENSIVE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  POST_FIX_COMPARISON.md  PRIORITIZED_ISSUES_AND_REMEDIATIONS.md  README.md  RERANKING_SCORE_ANALYSIS.json  evaluation_all_report_20260215_052817.md  evaluation_all_report_20260215_053358.md  evaluation_all_report_20260215_061543.md  evaluation_hybrid_report_20260216_235058.md  evaluation_optimized_9cases_20260215_075626.md  evaluation_sql_report_20260216_234022.md  evaluation_vector_report_20260216_234636.md  hybrid_evaluation_report_20260214_175206.md  missing_fields_report.txt  smart_tool_selection_test.json  sql_evaluation_report_20260214_164322.md  vector_evaluation_report_20260213_185715.md
scripts/: add_conversation_threads_hybrid.py  add_conversation_threads_sql.py  add_conversation_threads_vector.py  add_explicit_none_values.py  add_gold_contexts.py  analyze_field_usage.py  analyze_low_quality_chunks.py  analyze_reranking_scores.py  analyze_sql_accuracy.py  calculate_ragas_from_raw.py  compare_classifications.py  compare_ocr_engines.py  comprehensive_sample_eval.py  count_llm_calls.py  demo_logfire.py  demo_logfire_visual.py  (+64 more)
(+213 files in other folders)
