[tool.poetry]
name = "sports-see"
version = "0.1.0"
description = "NBA RAG Assistant using Mistral AI and FAISS for semantic search"
authors = ["Shahu"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"  # Lock to Python 3.11.x only
# Web frameworks
streamlit = "1.44.1"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
# AI/ML
mistralai = ">=1.2.5"
langchain = "0.3.23"
faiss-cpu = "1.10.0"
# Validation
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
# Document processing
PyPDF2 = "3.0.1"
python-docx = "1.1.2"
pandas = "2.2.3"
openpyxl = "3.1.5"
pymupdf = "^1.22.0"
pillow = "^10.0.0"
easyocr = "*"
tqdm = "*"
# Utilities
python-dotenv = "1.1.0"
requests = "2.32.3"
streamlit-feedback = "0.1.4"
sqlalchemy = "^2.0.46"
# Evaluation
ragas = ">=0.2.0"
langchain-mistralai = ">=0.2.0"
datasets = ">=3.5"
# Pydantic AI
pydantic-ai = ">=0.1.0"
# Observability
logfire = ">=1.0.0"
langchain-google-genai = "^2"
google-generativeai = "^0.8.6"
google-genai = "^1.62.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
numpy = "^2.4.2"
rapidocr-onnxruntime = {version = ">=1.3.0", python = ">=3.11,<3.13"}
plotly = "^6.5.2"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
black = "^24.0.0"
mypy = "^1.8.0"
interrogate = "^1.5.0"
pre-commit = "^4.5.1"
playwright = "^1.58.0"
pytest-playwright = "^0.7.2"

[tool.poetry.scripts]
ui = "src.ui.app:main"
api = "uvicorn:main"
index = "src.pipeline.data_pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = [
    "D203", # one-blank-line-before-class
    "D205", # blank-line-between-summary-and-description (conflicts with 5-field header)
    "D212", # multi-line-summary-first-line (conflicts with 5-field header)
    "D213", # multi-line-summary-second-line
    "D415", # first-line-punctuation (conflicts with 5-field header)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]  # Don't require docstrings in tests
"__init__.py" = ["D104"]  # Don't require docstrings in __init__.py

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "conversation: Conversation management E2E tests",
    "error_handling: Error handling E2E tests",
    "feedback: Feedback workflow E2E tests",
    "greeting: Greeting handling E2E tests",
    "chat_workflow: Chat workflow E2E tests",
    "api: API endpoint tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 80
exclude = ["setup.py", "docs", "build"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
